# sensor-gateway-protocol

./: Cargo.toml  cross.toml
scripts/: pre-build.sh
src/: ble.rs  main.rs  main.rs.bak  wifi.rs
